[package]
name = "knock-cli"
version = "0.1.0"
edition = "2024"
authors = ["Timothy Ye"]
homepage = "https://github.com/TimothyYe/knock"
repository = "https://github.com/TimothyYe/knock"
description = "A port knocking client"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.26"
argh = "0.1.13"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"