[package]
name = "knock"
version = "0.1.0"
edition = "2021"
authors = ["Derzsi Daniel", "Timothy Ye"]
homepage = "https://github.com/darktohka/knock-rs"
repository = "https://github.com/darktohka/knock-rs"
description = "A port knocking client"
license = "Apache-2.0"

[dependencies]
log = "0"
simple_logger = "5"
argh = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
