[package]
name = "knockd"
version = "0.1.0"
edition = "2024"
authors = ["Timothy Ye"]
homepage = "https://github.com/TimothyYe/knock"
repository = "https://github.com/TimothyYe/knock"
description = "A port knocking server written in Rust"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = { version = "0.35.0", default-features = false, features = ["std"] }
serde = { version = "1.0.218", default-features = false, features = ["std", "derive"] }
serde_json = "1.0.139"
log = "0.4.26"
argh = "0.1.13"
pretty_env_logger = "0.5.0"
