[package]
name = "knockd"
version = "0.1.0"
edition = "2021"
authors = ["Derzsi Daniel", "Timothy Ye"]
homepage = "https://github.com/darktohka/knock-rs"
repository = "https://github.com/darktohka/knock-rs"
description = "A port knocking server written in Rust"
license = "Apache-2.0"

[dependencies]
ctrlc = { version = "3", features = ["termination"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde_json = "1"
log = "0"
simple_logger = "5"
argh = "0"
pcap = "2"
